# selendra

./: Cargo.toml  README.md
docs/: codebase_summary.md
docs/business/: business_paper.md
docs/geting-started/: selendra-paper-v2.0.md  validator-nominator-faq.md
docs/learn/dev-guides/: dev-environment-setup.md  evm-contracts.md
docs/learn/user-guides/: creating-wallet.md
docs/technical/: api_spec.md  consensus-spec.md  deployment_guide.md  development_guide.md  integration-spec.md  network_ops.md  runtime_spec.md  security_guide.md  timeline.md  whitepaper.md
docs/website/: applications.mdx  community.mdx  ecosystem.mdx  index.mdx  use-cases.mdx
node/: Cargo.toml
node/src/: chain_spec.rs  main.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: lib.rs
pallets/consensus/: Cargo.toml
pallets/consensus/src/: lib.rs
pallets/fees/: Cargo.toml
pallets/fees/src/: lib.rs
pallets/governance/: Cargo.toml
pallets/governance/src/: lib.rs
pallets/naming/: Cargo.toml
pallets/naming/src/: lib.rs
pallets/validator/: Cargo.toml
pallets/validator/src/: lib.rs
pallets/zk-rollup/: Cargo.toml
pallets/zk-rollup/src/: config.rs  evm.rs  evm_proof.rs  lib.rs  operator.rs  proof.rs  state.rs
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  zk_rollup.rs
scripts/: README.md  benchmark.sh  build-wasm.sh  start-local-network.sh
