[workspace]
members = [
    "node",
    "runtime",
    "pallets/*",
    "primitives",
]

[workspace.package]
authors = ["Selendra Network <https://github.com/selendra>"]
edition = "2021"
repository = "https://github.com/selendra/selendra"

[workspace.dependencies]
# Substrate Core
substrate-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# Frontier for EVM compatibility
frontier-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v1.0.0" }
pallet-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v1.0.0" }
fp-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v1.0.0" }

# Utilities
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
log = { version = "0.4.20", default-features = false }

# Testing
mockall = "0.12.1"
proptest = "1.4.0"

[profile.release]
panic = "unwind"
opt-level = 3
lto = true

[profile.production]
inherits = "release"
codegen-units = 1
