[package]
name = "selendra-node"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "selendra"
path = "src/main.rs"

[dependencies]
# Local
selendra-runtime = { path = "../runtime" }
selendra-primitives = { path = "../primitives" }

# Substrate
substrate-core = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

# Node-specific
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# Utilities
codec = { workspace = true }
log = { workspace = true }
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
