[package]
name = "selendra-runtime"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
# Local
selendra-primitives = { path = "../primitives", default-features = false }

# Substrate
substrate-core = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
pallet-balances = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

# Frontier
frontier-evm = { workspace = true }
pallet-evm = { workspace = true }
fp-evm = { workspace = true }

# Utilities
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }

[features]
default = ["std"]
std = [
    "selendra-primitives/std",
    "substrate-core/std",
    "frame-system/std",
    "frame-support/std",
    "pallet-balances/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "frontier-evm/std",
    "pallet-evm/std",
    "fp-evm/std",
    "codec/std",
    "scale-info/std",
    "log/std",
]
