[package]
name = "pallet-selendra-fees"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
# Local
selendra-primitives = { path = "../../primitives", default-features = false }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

# Utilities
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std"]
std = [
    "selendra-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "codec/std",
    "scale-info/std",
    "log/std",
]
