[package]
name = "selendra-naming-service"
version = "1.0.0"
edition = "2021"

[dependencies]
# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

# Local dependencies
selendra-primitives = { path = "../../primitives" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
]
